# claim-sight

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
claim_sight/: .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml
claim_sight/src/database/: claims.json  members.json  providers.json  tariffs.json
claim_sight/src/pipeline/: graph.py
claim_sight/src/pipeline/config/: llm.py
claim_sight/src/pipeline/nodes/request_missing_details/: node.py  prompt.py
claim_sight/src/pipeline/nodes/step_1_extract_details/: node.py  prompt.py  schema.py
claim_sight/src/pipeline/nodes/step_2_compute_features/: node.py  prompt.py  schema.py
claim_sight/src/pipeline/nodes/step_3_score_claim/: node.py  prompt.py
claim_sight/src/pipeline/state/: claim_schema.py  features_schema.py  schema.py  score_schema.py  state.py
clain_sight_ui/: Dockerfile  README.md  package-lock.json  package.json
clain_sight_ui/app/: layout.tsx  page.tsx
clain_sight_ui/components/: app-sidebar.tsx  company-logo.tsx  nav-main.tsx  nav-user.tsx  team-switcher.tsx
clain_sight_ui/components/agent/: agent-chat.tsx  agent-header-actions.tsx  agent-provider.tsx  chat-composer.tsx  claim-panel.tsx  claim-pipeline.tsx  message-list.tsx  types.ts
