[project]
name = "claim-sight"
version = "0.1.0"
description = "Insurance claim processing pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "langgraph-cli[inmem]>=0.4.14",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "ipykernel>=7.2.0",
]
